--- a/workout-tracker-backend/src/main/resources/application.properties
+++ b/workout-tracker-backend/src/main/resources/application.properties
@@ -40,8 +40,8 @@ jwt.refresh-expiration=604800000
 # ================================================
 # SPRING SECURITY
 # ================================================
-# Disable default security password in console
-spring.security.user.password=disabled
+# Logging level for security
+logging.level.org.springframework.security=DEBUG
 
 # ===============================
 # FLYWAY
