--- a/workout-tracker-backend/pom.xml
+++ b/workout-tracker-backend/pom.xml
@@ -96,7 +96,7 @@
 			<artifactId>spring-boot-starter-webmvc-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<!--  JWT	-->
+		<!-- JWT -->
 		<dependency>
 			<groupId>io.jsonwebtoken</groupId>
 			<artifactId>jjwt-api</artifactId>
@@ -114,7 +114,14 @@
 			<version>0.13.0</version>
 			<scope>runtime</scope>
 		</dependency>
-		<!--MapStruct	-->
+		<!-- Source: https://mvnrepository.com/artifact/com.nimbusds/nimbus-jose-jwt -->
+		<dependency>
+			<groupId>com.nimbusds</groupId>
+			<artifactId>nimbus-jose-jwt</artifactId>
+			<version>10.7</version>
+			<scope>compile</scope>
+		</dependency>
+		<!-- MapStruct	-->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
