Optimize query when copy plan using entity graph

--- a/workout-tracker-backend/src/main/resources/application.properties
+++ b/workout-tracker-backend/src/main/resources/application.properties
@@ -20,6 +20,11 @@ spring.jpa.properties.hibernate.format_sql=true
 # Hibernate dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
+# Hibernate batch insert
+spring.jpa.properties.hibernate.jdbc.batch_size=50
+spring.jpa.properties.hibernate.order_inserts=true
+
+
 # Logging level for SQL
 logging.level.org.hibernate.SQL=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
